...
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_option_title"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/amplitudeSettingsTitleText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textSize="35sp"/>

    <TextView
...
